--- a/TestMyApt/Podfile
+++ b/TestMyApt/Podfile
@@ -7,5 +7,8 @@ target 'TestMyApt' do
     pod 'Alamofire'
     pod 'SDWebImage'
     pod 'SVProgressHUD'
-    pod 'SwiftLint'
+    #pod 'SwiftLint'
+    #SwiftLint é um framework para padronizar a escrita em Swift 3,
+    #deixei ele comentado, para utiliza-lo seguir a o ReadMe do Projeto: https://github.com/realm/SwiftLint
+    #tambem chamar na pasta do projeto no terminal: swiftlint lint --config .swiftlint.yml
 end
